--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,42 @@
-# Xcode
-#
-build/
-*.pbxuser
-!default.pbxuser
-*.mode1v3
-!default.mode1v3
-*.mode2v3
-!default.mode2v3
-*.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
-*.xcuserstate
+# C++ objects and libs
 
-# CocoaPods
-#
-# We recommend against adding the Pods directory to your .gitignore. However
-# you should judge for yourself, the pros and cons are mentioned at:
-# http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
-#
-# Pods/
+*.slo
+*.lo
+*.o
+*.a
+*.la
+*.lai
+*.so
+*.dll
+*.dylib
+
+# Qt-es
+
+*.pro.user
+*.pro.user.*
+moc_*.cpp
+qrc_*.cpp
+Makefile
+*-build-*
+
+# build dir
+/build-*
+
+# debian build dir
+/debian/files
+/debian/*.debhelper.log
+/debian/*.substvars
+
+#gedit temp file
+*~
+
+#Mac Spotlight Search
+
+.DS_Store
+
+#astyle temp files
+Thumbs.db
+
+#doxygen
+doc/html
+
